fix(css): add overflow-x: clip to stop horizontal overflow
remove extra blank line after the body CSS rule

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
   height: 100%;
   font-family: "Josefin Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
+  overflow-x: clip;
 }
-
 h1,
 h2,
 h3,
